--- a/project/.env
+++ b/project/.env
@@ -40,5 +40,6 @@ DATABASE_NAME=dev
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+#MAILER_DSN=sendmail://default
+MAILER_DSN=smtp://mailer:1025
 ###< symfony/mailer ###
