--- a/project/config/packages/liip_imagine.yaml
+++ b/project/config/packages/liip_imagine.yaml
@@ -2,3 +2,50 @@
 liip_imagine:
     # valid drivers options include "gd" or "gmagick" or "imagick"
     driver: "gd"
+
+    resolvers:
+        default:
+            web_path:
+                web_root: "%kernel.project_dir%/public"
+                cache_prefix: media_cache
+
+    cache: default
+
+    filter_sets:
+        cache: ~
+        app_thumbnail:
+            filters:
+                thumbnail:
+                    size: [ 40, 40 ]
+                    mode: inset
+                    allow_upscale: true
+
+        crud_admin_image:
+            filters:
+                relative_resize:
+                    heighten: 40
+
+        product_orig_image:
+            filters:
+                downscale:
+                    max: [ 480, 600 ]
+
+        product_small_image:
+            filters:
+                downscale:
+                    max: [ 315, 410 ]
+
+        banner_mobile_image:
+            filters:
+                downscale:
+                    max: [ 768, 650 ]
+
+        banner_desktop_image:
+            filters:
+                downscale:
+                    max: [ 1600, 735 ]
+
+        component_image:
+            filters:
+                downscale:
+                    max: [ 300, 220 ]
