--- a/project/composer.json
+++ b/project/composer.json
@@ -16,6 +16,7 @@
         "liip/imagine-bundle": "^2.9",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.13",
+        "picqer/php-barcode-generator": "^2.2",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
